--- a/fr/index.html
+++ b/fr/index.html
@@ -223,20 +223,20 @@
                       class="subtitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":900,"delay":900}'
                     >
-                      Welcome to Plate
+                      Youm with Mady
                     </h3>
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
-                      data-subtext="#1"
                     >
-                      delivery service
+                      JE CUISINE, JE ME RÉGALE
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Plate offers quick delivery of organic &amp; healthy food
-                      all over the state.
+                      Je suis Youm with mady et je vis à Casablanca. L’une de
+                      mes passions est de cuisiner sans aucune connaissance de
+                      la technique des professionnels.
                     </p>
                     <p
                       class="postitle"
@@ -272,20 +272,19 @@
                       class="subtitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":900,"delay":900}'
                     >
-                      Delivery throughout the Country
+                      Youm with Mady
                     </h3>
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
-                      data-subtext="250"
                     >
-                      supported locations
+                      Découvrir
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Our food delivery service is available in more than 200
-                      cities for your comfort.
+                      A travers, www.youmwithmady.com, je me donne un plaisir de
+                      vous ouvrir la porte de ma cuisine.
                     </p>
                     <p
                       class="postitle"
@@ -321,20 +320,19 @@
                       class="subtitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":900,"delay":900}'
                     >
-                      Best dishes &amp; ingredients
+                      Youm with Mady
                     </h3>
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
-                      data-subtext="100%"
                     >
-                      Delicious Food
+                      MES PLATS
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Plate regularly updates the menus to make sure our
-                      customers eat the best and the tastiest food.
+                      Vous allez découvrir mes plats dans la joie, la bonne
+                      humeur et aussi la bonne musique.
                     </p>
                     <p
                       class="postitle"
@@ -370,20 +368,18 @@
                       class="subtitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":900,"delay":900}'
                     >
-                      Our clients trust us
+                      Youm with Mady
                     </h3>
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
-                      data-subtext="3k"
                     >
-                      Positive Reviews
+                      Ma cuisine
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Our clients’ reviews are the best way to learn more about
-                      our food delivery service.
+                      Saine, facile, délicieuse et rapide.
                     </p>
                     <p
                       class="postitle"
