--- a/fr/index.html
+++ b/fr/index.html
@@ -225,7 +225,7 @@
                     >
                       Youm with Mady
                     </h3>
-                    <h1
+                    <h1 style="    font-size: 36px;"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
                       JE CUISINE, JE ME RÉGALE
@@ -238,12 +238,12 @@
                       mes passions est de cuisiner sans aucune connaissance de
                       la technique des professionnels.
                     </p>
-                    <p
+                    <!--p
                       class="postitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1200,"delay":1200}'
                     >
                       Why Choose Plate
-                    </p>
+                    </p-->
                   </div>
                   <div class="box-round-wrap">
                     <img
@@ -286,12 +286,12 @@
                       A travers, www.youmwithmady.com, je me donne un plaisir de
                       vous ouvrir la porte de ma cuisine.
                     </p>
-                    <p
+                    <!--p
                       class="postitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1200,"delay":1200}'
                     >
                       Nationwide Delivery
-                    </p>
+                    </p-->
                   </div>
                   <div class="box-round-wrap">
                     <img
@@ -334,12 +334,12 @@
                       Vous allez découvrir mes plats dans la joie, la bonne
                       humeur et aussi la bonne musique.
                     </p>
-                    <p
+                    <!--p
                       class="postitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1200,"delay":1200}'
                     >
                       Organic Ingredients
-                    </p>
+                    </p-->
                   </div>
                   <div class="box-round-wrap">
                     <img
@@ -381,12 +381,12 @@
                     >
                       Saine, facile, délicieuse et rapide.
                     </p>
-                    <p
+                    <!--p
                       class="postitle"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1200,"delay":1200}'
                     >
                       Reviews &amp; Testimonials
-                    </p>
+                    </p-->
                   </div>
                   <div class="box-round-wrap">
                     <img
