--- a/fr/index.html
+++ b/fr/index.html
@@ -423,31 +423,21 @@
                   width="455"
                   height="342"
                 />
-                <div class="box-custom-2-smal">
-                  <p class="box-custom-2-name">Julie Fox</p>
-                  <p class="box-custom-2-position">Head Chef</p>
-                </div>
+                
               </div>
             </div>
             <div class="col-xl-5 col-lg-6">
               <div class="box-custom-1">
-                <h3>About us</h3>
                 <h2>
-                  healthy food <br />
-                  can be delicious
+                  Mon Univers <br />
                 </h2>
-                <p>
-                  Plate was established in 2013, as a reliable food service
-                  provider where anyone could order healthy food they like.
-                </p>
                 <ul class="list-marked">
-                  <li>Choose gluten-free meals from our menu</li>
-                  <li>The freshest ingredients for every dish</li>
-                  <li>Get great discounts when ordering for 2+ people</li>
+                  <li>La vraie cuisine est une forme d’art.</li>
+                  <li>La décoration n’a pas de code.</li>
+                  <li>La liberté est de mise à table.</li>
+                  <li>La concrétisation d’un plat imaginé</li>
                 </ul>
-                <a class="button button-primary" href="index.html#"
-                  >read more</a
-                >
+                
               </div>
             </div>
           </div>
@@ -460,8 +450,8 @@
       <section class="section novi-bg novi-bg-img section-md-2 bg-default">
         <div class="container">
           <div class="text-center">
-            <h3>how it works</h3>
-            <h2>3 steps to healthy eating</h2>
+            <h2>3 raisons pour cuisiner
+</h2>
           </div>
           <div
             class="row row-50 post-classic-counter justify-content-lg-between justify-content-center"
@@ -469,30 +459,32 @@
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-1">
                 <h3 class="post-classic-title">
-                  choose <br />
-                  a food package
+                  Pourquoi  je cuisine? <br />
                 </h3>
                 <p class="post-classic-text">
-                  First, select the package that you prefer the most.
+                  Pour manger sain.<br/>
+                  Pour réaliser mes propres recettes. 
+
                 </p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-2">
-                <h3 class="post-classic-title">customize your menu</h3>
+                <h3 class="post-classic-title">Style de cuisine?</h3>
                 <p class="post-classic-text">
-                  After that, feel free to change and customize your menu.
+                  Une cuisine simple,  amusante,  savoureuse, avec peu d’ingrédients, se basant plus sur les légumes que les viandes, avec un temps de cuisson réduit. 
+
                 </p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-3">
                 <h3 class="post-classic-title">
-                  Select a delivery <br />
-                  address & time
+                  Pourquoi je partage?
                 </h3>
                 <p class="post-classic-text">
-                  Finally, let us know where and when to deliver your food.
+                  Pour témoigner que nous pouvons manger sain, bon marché et dans l’élégance malgré le manque de temps.<br/>
+                  Pour vous donner l’envie de cuisiner et non vous apprendre à cuisiner.
                 </p>
               </div>
             </div>
@@ -607,10 +599,9 @@
       </section>
 
       <!-- Testimonials-->
-      <section
+      <!--section
         class="section novi-bg novi-bg-img section-md-3 bg-default"
-        id="clients"
-      >
+        id="clients">
         <div class="container">
           <div class="row row-40 align-items-center">
             <div class="col-lg-6">
@@ -644,7 +635,6 @@
             <div class="col-lg-6">
               <h3>what Our clients say</h3>
               <h2>testimonials</h2>
-              <!-- Owl Carousel-->
               <div class="quote-classic-wrap">
                 <div class="quote-classic-img">
                   <img
@@ -696,7 +686,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section-->
 
       <footer class="section footer-classic">
         <div class="container">
