--- a/fr/index.html
+++ b/fr/index.html
@@ -688,11 +688,11 @@
         </div>
       </section-->
 
-      <footer class="section footer-classic">
+      <!--footer class="section footer-classic">
         <div class="container">
           <div class="row row-50 justify-content-between">
             <div class="col-xl-3 col-md-6">
-              <!--Brand--><a class="brand" href="index-2.html"
+              <a class="brand" href="index-2.html"
                 ><img
                   class="brand-logo-dark"
                   src="../images/logo-default-269x100.png"
@@ -774,7 +774,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer-->
     </div>
     <div class="snackbars" id="form-output-global"></div>
     <script src="../js/core.min.js"></script>
