--- a/fr/index.html
+++ b/fr/index.html
@@ -96,7 +96,8 @@
                         width="134"
                         height="50" /><img
                         class="http://netsharp.biz/1/brand-logo-light"
-                        src="../images/logo-inverse-269x100.png"
+                        src="../images/logo-inverse-269x100.png" 
+                        style="width: 120%;"
                         alt=""
                         width="134"
                         height="50"
@@ -397,7 +398,7 @@
             <div class="col-xl-5 col-lg-6">
               <div class="box-custom-1">
                 <h2>
-                  Mon Univers <br />
+                  Mon Univers <br /><br />
                 </h2>
                 <ul class="">
                   <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li>
