--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="page">
       <!--Swiper-->
       <section
-        class="section swiper-container swiper-slider bg-primary swiper-container-horizontal"
+        class="section swiper-container swiper-slider bg-light swiper-container-horizontal"
         data-autoplay="3500"
         data-loop="false"
         data-simulate-touch="false"
@@ -94,11 +94,11 @@
           </div>
         </div>
       </section>
-      <footer class="section footer-classic">
+      <!--footer class="section footer-classic">
         <div class="container">
           <div class="row row-50 justify-content-between">
             <div class="col-xl-3 col-md-6">
-              <!--Brand--><a class="brand" href="index-2.html"
+              <a class="brand" href="index-2.html"
                 ><img
                   class="brand-logo-dark"
                   src="images/logo-default-269x100.png"
@@ -180,7 +180,7 @@
             </div>
           </div>
         </div>
-      </footer>
+      </footer-->
     </div>
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
