--- a/fr/index.html
+++ b/fr/index.html
@@ -401,10 +401,10 @@
                   Mon Univers <br /><br />
                 </h2>
                 <ul class="">
-                  <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li>
-                  <li><img src="../images/tajine.png"/> La décoration n’a pas de code.</li>
-                  <li><img src="../images/tajine.png"/> La liberté est de mise à table.</li>
-                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé</li>
+                  <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li><br />
+                  <li><img src="../images/tajine.png"/> La décoration n’a pas de code.</li><br />
+                  <li><img src="../images/tajine.png"/> La liberté est de mise à table.</li><br />
+                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé</li><br />
                 </ul>
                 
               </div>
@@ -509,7 +509,7 @@
                       </h3>
                     </div>
                     <p class="box-icon-text">
-                      L'ail, le frais citron, gingembre et le persil.
+                     L'ail, le gingembre frais, le citron et le persil.
                     </p>
                   </div>
                 </div>
@@ -522,7 +522,7 @@
                       <h3 class="box-icon-title">Mes ingrédients <img src="../images/no.png"></h3>
                     </div>
                     <p class="box-icon-text">
-                      Le sel, le sucre et les produits industrialisés
+                      Le sel, le sucre et les produits industrialisés.
                     </p>
                   </div>
                 </div>
