--- a/fr/index.html
+++ b/fr/index.html
@@ -398,13 +398,13 @@
             <div class="col-xl-5 col-lg-6">
               <div class="box-custom-1">
                 <h2>
-                  Mon Univers <br /><br />
+                  <b>Mon Univers</b> <br /><br />
                 </h2>
                 <ul class="">
                   <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li><br />
                   <li><img src="../images/tajine.png"/> La décoration n’a pas de code.</li><br />
                   <li><img src="../images/tajine.png"/> La liberté est de mise à table.</li><br />
-                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé</li><br />
+                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé.</li><br />
                 </ul>
                 
               </div>
@@ -419,7 +419,8 @@
       <section class="section novi-bg novi-bg-img section-md-2 bg-default">
         <div class="container">
           <div class="text-center">
-            <h2>3 raisons pour cuisiner</h2>
+            <h2><b><span style="font-size: 38px;
+    font-weight: bold;">3</span> raisons pour cuisiner</b></h2>
           </div>
           <div
             class="row row-50 post-classic-counter justify-content-lg-between justify-content-center"
