--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       html.lt-ie-10 .ie-panel {
         display: block;
       }
+
+      body {
+    background: #001453;
+  }
     </style>
   </head>
   <body>
@@ -71,25 +75,38 @@
           id="menu-container"
           style="width: 100%; margin-top: 10vh"
         >
-          <div class="col-md-4">
+          <div class="col-md-4" style="text-align: center;">
             <a href="fr/index.html"
               ><img id="move" src="images/2.png" /><img
                 style="margin-top: 50px"
                 src="images/1.png"
+            />
+          <img
+                style="    width: 50px;
+"
+                src="images/fr.png"
             /></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" style="text-align: center;">
             <a href="#"
-              ><img id="move" src="images/2.png" /><img
+              ><img id="move" src="images/3.png" /><img
                 style="margin-top: 50px"
                 src="images/1.png"
+            /><img
+                style="    width: 50px;
+"
+                src="images/ar.png"
             /></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" style="text-align: center;">
             <a href="#"
-              ><img id="move" src="images/2.png" /><img
+              ><img id="move" src="images/4.png" /><img
                 style="margin-top: 50px"
                 src="images/1.png"
+            /><img
+                style="    width: 50px;
+"
+                src="images/en.png"
             /></a>
           </div>
         </div>
