--- a/fr/index.html
+++ b/fr/index.html
@@ -761,6 +761,11 @@ text-align: center;
   <img class="mySlides" src="../images/2.jpg" style="">
   <img class="mySlides" src="../images/3.jpg" style="">
   <img class="mySlides" src="../images/4.jpg" style="">
+  <img class="mySlides" src="../images/5.jpg" style="">
+  <img class="mySlides" src="../images/6.jpg" style="">
+  <img class="mySlides" src="../images/7.jpg" style="">
+  <img class="mySlides" src="../images/8.jpg" style="">
+  <img class="mySlides" src="../images/9.jpg" style="">
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
