--- a/ar/index.html
+++ b/ar/index.html
@@ -42,6 +42,8 @@
     /* float: right; */
     text-align: initial;
       }
+      .box-icon-header {
+    direction: initial;}
     </style>
   </head>
   <body>
@@ -431,10 +433,8 @@
       <!-- How it Works-->
       <section class="section novi-bg novi-bg-img section-md-2 bg-default">
         <div class="container">
-          <div class="text-center">
-            <h2><b><span style="font-size: 38px;
-    font-weight: bold;">3</span>  أسئلة ؟
-</b></h2>
+          <div class="text-center" style="direction: rtl;">
+            <h2><b>3 أسئلة ؟</b></h2>
           </div>
           <div
             class="row row-50 post-classic-counter justify-content-lg-between justify-content-center"
@@ -545,7 +545,8 @@
                       <div
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
-                      <h3 class="box-icon-title">ا لمكونات
+                      <h3 style="    direction: rtl;
+" class="box-icon-title">المكونات 
  <img src="../images/no.png"></h3>
                     </div>
                     <p class="box-icon-text">
