--- a/ar/index.html
+++ b/ar/index.html
@@ -270,7 +270,7 @@
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      من خلال موقع www.youmwithmady.com ،  يسعدني أن أفتح لكم  باب مطبخي.
+                      من خلال موقع www.youmwithmady.com   يسعدني أن أفتح لكم  باب مطبخي.
 
                     </p>
                     <!--p
@@ -411,7 +411,7 @@
                   <b>          عالم مطبخي
 </b> <br /><br />
                 </h2>
-                <ul class="">
+                <ul class="" style="font-size: 22px;">
                   <li><img src="../images/tajine.png"/> فني، ذوقي وإبداعي.
 </li><br />
                   <li><img src="../images/tajine.png"/> جمالية التقديم في التميز.
