--- a/fr/index.html
+++ b/fr/index.html
@@ -769,7 +769,11 @@ text-align: center;
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
-<h2 class="w3-center"></h2>
+<center>
+<br/>
+       <h1>Vidéo</h1>
+<iframe src="https://drive.google.com/file/d/1l4Vl4fpB9uf9za1S9iayEt94VTMHefz5/preview" width="640" height="362"></iframe>
+</center>
 <script>
 var slideIndex = 1;
 showDivs(slideIndex);
