--- a/fr/index.html
+++ b/fr/index.html
@@ -763,6 +763,7 @@ text-align: center;
   <img class="mySlides" src="../images/5.jpg" style="">
   <img class="mySlides" src="../images/6.jpg" style="">
   <img class="mySlides" src="../images/7.jpg" style="">
+  <img class="mySlides" src="../images/77.jpg" style="">
   <img class="mySlides" src="../images/8.jpg" style="">
   <img class="mySlides" src="../images/9.jpg" style="">
 
