--- a/ar/index.html
+++ b/ar/index.html
@@ -95,7 +95,7 @@
                 <div class="rd-navbar-panel">
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index-2.html"
+                    <!--Brand--><a class="brand" href="../index.html"
                       ><img
                         class="brand-logo-dark"
                         src="../images/logo-ar.png"
