--- a/fr/index.html
+++ b/fr/index.html
@@ -88,7 +88,7 @@
                 <div class="rd-navbar-panel">
                   <!--RD Navbar Brand-->
                   <div class="rd-navbar-brand">
-                    <!--Brand--><a class="brand" href="index-2.html"
+                    <!--Brand--><a class="brand" href="../index.html"
                       ><img
                         class="brand-logo-dark"
                         src="../images/logo-default-269x100.png"
