--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             /></a>
           </div>
           <div class="col-md-4" style="text-align: center;">
-            <a href="#"
+            <a href="ar/index.html"
               ><img id="move" src="images/2.png" /><img
                 style="margin-top: 50px"
                 src="images/1.png"
@@ -99,7 +99,7 @@
             /></a>
           </div>
           <div class="col-md-4" style="text-align: center;">
-            <a href="#"
+            <a href="en/index.html"
               ><img id="move" src="images/4.png" /><img
                 style="margin-top: 50px"
                 src="images/1.png"
