--- a/ar/index.html
+++ b/ar/index.html
@@ -796,7 +796,11 @@ text-align: center;
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
-<h2 class="w3-center"></h2>
+<center>
+<br/>
+       <img src="../images/tajine.png"/> <img src="../images/tajine.png"/> <img src="../images/tajine.png"/><br/><br/>
+<iframe src="https://drive.google.com/file/d/1l4Vl4fpB9uf9za1S9iayEt94VTMHefz5/preview" width="640" height="362"></iframe>
+</center>
 <script>
 var slideIndex = 1;
 showDivs(slideIndex);
@@ -835,7 +839,7 @@ function showDivs(n) {
                       </a>
                     </li>
                     <li class="list-inline-item">
-                      <a href="#" target="_blank">
+                      <a href="mailto:youmwithmady@gmail.com" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-envelope fa-stack-1x "></i>
