--- a/fr/index.html
+++ b/fr/index.html
@@ -771,7 +771,7 @@ text-align: center;
 </div>
 <center>
 <br/>
-       <h1>Vidéo</h1>
+       <img src="../images/tajine.png"/> <img src="../images/tajine.png"/> <img src="../images/tajine.png"/><br/><br/>
 <iframe src="https://drive.google.com/file/d/1l4Vl4fpB9uf9za1S9iayEt94VTMHefz5/preview" width="640" height="362"></iframe>
 </center>
 <script>
@@ -812,7 +812,7 @@ function showDivs(n) {
                       </a>
                     </li>
                     <li class="list-inline-item">
-                      <a href="#" target="_blank">
+                      <a href="mailto:youmwithmady@gmail.com" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-envelope fa-stack-1x "></i>
