--- a/en/index.html
+++ b/en/index.html
@@ -820,9 +820,11 @@ function showDivs(n) {
 
         <ul class="list-inline list-social-icons mb-0">
                     
-                    <li class="list-inline-item">
+                     <li class="list-inline-item mtooltip">
                       <a href="#" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
+
+<span class="mtooltiptext">Stay tuned</span>
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-youtube fa-stack-1x "></i>
                         </span>
