--- a/fr/index.html
+++ b/fr/index.html
@@ -774,6 +774,7 @@ text-align: center;
        <img src="../images/tajine.png"/> <img src="../images/tajine.png"/> <img src="../images/tajine.png"/><br/><br/>
 <iframe src="https://drive.google.com/file/d/1l4Vl4fpB9uf9za1S9iayEt94VTMHefz5/preview" width="640" height="362"></iframe>
 </center>
+   
 <script>
 var slideIndex = 1;
 showDivs(slideIndex);
@@ -803,15 +804,18 @@ function showDivs(n) {
 
         <ul class="list-inline list-social-icons mb-0">
                     
-                    <li class="list-inline-item">
+                    <li class="list-inline-item mtooltip">
                       <a href="#" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
+
+<span class="mtooltiptext">Très bientôt</span>
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-youtube fa-stack-1x "></i>
                         </span>
                       </a>
                     </li>
-                    <li class="list-inline-item">
+                  
+                    <li class="list-inline-item ">
                       <a href="mailto:youmwithmady@gmail.com" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
@@ -819,6 +823,7 @@ function showDivs(n) {
                         </span>
                       </a>
                     </li>
+
                     <li class="list-inline-item">
                       <a href="#" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
