--- a/en/index.html
+++ b/en/index.html
@@ -349,7 +349,7 @@ MY MENU
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Healthy, tasty, Easy and Quick.
+                      Healthy, tasty, easy and quick.
                     </p>
                     <!--p
                       class="postitle"
