--- a/fr/index.html
+++ b/fr/index.html
@@ -808,7 +808,7 @@ function showDivs(n) {
                       <a href="#" target="_blank">
                         <span style="color:black;" class="fa-stack fa-lg">
 
-<span class="mtooltiptext">Très bientôt</span>
+<span class="mtooltiptext">bientôt</span>
                           <i style="color: white;" class="fa fa-circle fa-stack-2x"></i>
                           <i class="fa fa-youtube fa-stack-1x "></i>
                         </span>
