--- a/ar/index.html
+++ b/ar/index.html
@@ -3,6 +3,14 @@
   <!-- Mirrored from netsharp.biz/1/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 20:54:01 GMT -->
   <head>
     <title>Youm With Mady</title>
+    <meta
+      name="Description"
+      content="
+
+ولوعة بفنون الطهي وأحضر وصفات صحية، شهية، سهلة وسريعة.
+
+"
+    />
     <meta charset="utf-8" />
     <meta
       name="viewport"
