--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <!-- Mirrored from netsharp.biz/1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 20:56:17 GMT -->
   <head>
     <title>Home</title>
+    <meta
+      name="Description"
+      content="Passionnée par le monde culinaire et la cuisine saine. Mes recettes sont faciles, rapides et servies
+dans des plats délicieux."
+    />
     <meta charset="utf-8" />
     <meta
       name="viewport"
