--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ dans des plats délicieux."
     <!-- Panel Thumbnail-->
     <!-- Template panel-->
 
-    <div class="page">
+    <div class="page" style="opacity: 1;">
       <!--Swiper-->
       <section
         class="section swiper-container swiper-slider bg-light swiper-container-horizontal"
@@ -203,6 +203,10 @@ dans des plats délicieux."
           </div>
         </div>
       </footer-->
+      <div class="text-center" style="padding-bottom: 10px;">
+              <span style="color:white;">  Développé par</span><a style="color:white;" href="https://hicham.tech"> Hicham.tech</a>
+              
+            </div>
     </div>
     <div class="snackbars" id="form-output-global"></div>
     <script src="js/core.min.js"></script>
