--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
-  <!-- Mirrored from netsharp.biz/1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 20:56:17 GMT -->
   <head>
-    <title>Home</title>
+    <title>Youmwithmady.com - cuisine marocaine</title>
     <meta
       name="Description"
       content="Passionnée par le monde culinaire et la cuisine saine. Mes recettes sont faciles, rapides et servies
@@ -233,7 +232,5 @@ dans des plats délicieux."
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-P9FT69");
   </script>
-  <!-- End Google Tag Manager -->
 
-  <!-- Mirrored from netsharp.biz/1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Sep 2020 20:56:17 GMT -->
 </html>
